@@ -32,6 +32,7 @@ from Persistence import PersistentMapping
 from OFS.Uninstalled import BrokenClass
 from OFS.IOrderSupport import IOrderedContainer
 from ZODB.POSException import ConflictError
+from zExceptions import BadRequest
 from AccessControl.Permission import Permission
 
 from Products.ATContentTypes.migration.common import *
@@ -512,7 +513,23 @@ class FolderMigrationMixin(ItemMigrationMixin):
             # to folder._objects but also reindexes all objects.
             __traceback_info__ = __traceback_info__ = ('migrate_children',
                           self.old, self.orig_id, 'Migrating subobject %s'%id)
-            self.new._setObject(id, obj, set_owner=0)
+            try:
+                self.new._setObject(id, obj, set_owner=0)
+            except BadRequest:
+                # If we already have the object we need to remove it carefully
+                # and retry.  We can assume that such an object must be
+                # autogenerated by a prior migration step and thus is less
+                # correct than the original.  Such objects may want to
+                # consider setting the attribute '__replaceable__' to avoid
+                # this.
+                if id in self.new.objectIds():
+                    self.new._delOb(id)
+                    if getattr(self.new, '_objects', None) is not None:
+                        self.new._objects = tuple([o for o in
+                                        self.new._objects if o['id'] != id])
+                    self.new._setObject(id, obj, set_owner=0)
+                else:
+                    raise
 
         # reorder items
         # in CMF 1.5 Topic is orderable while ATCT's Topic is not orderable
