@@ -83,6 +83,12 @@ def editATCT(obj):
 
 tests = []
 
+# A manage_afterAdd that auto creates some sibling
+def doc_manage_afterAdd(self, item, container, *args, **kwargs):
+    self.old_manage_afterAdd(item, container, *args, **kwargs)
+    if 'bogus_object' not in container.objectIds():
+        container.invokeFactory('Folder', 'bogus_object')
+
 class TestTypeMigrations(atcttestcase.ATCTTypeTestCase):
 
     klass = ATDocument
@@ -221,14 +227,34 @@ class TestTypeMigrations(atcttestcase.ATCTTypeTestCase):
         # recatalog so the catalog knows about the new name
         cat.reindexObject(cmfdoc)
         self.failUnlessEqual(cmfdoc.portal_type, 'Document')
-        
+
         transaction.savepoint() # subtransaction
-        
+
         atct = self.portal.portal_atct
-        
+
         changed, elapse, c_elapse = atct.migrationFixCMFPortalTypes()
         self.failUnlessEqual(changed, '/'.join(cmfdoc.getPhysicalPath()))
         self.failUnlessEqual(cmfdoc.portal_type, 'CMF Document')
+
+    def test_migrate_container_with_autogenerated_objects(self):
+        self.setRoles(('Manager','Member'))
+        #Monkey patch ATDocument to do funny things in manage_afterAdd
+        ATDocument.old_manage_afterAdd = ATDocument.manage_afterAdd.im_func
+        ATDocument.manage_afterAdd = doc_manage_afterAdd
+        cmffolder = self._createType(self.folder, 'CMF Folder', 'cmffolder')
+        # should create document and bogus autogenerated object
+        cmffolder.invokeFactory('Document', 'doc')
+        self.failUnless('bogus_object' in cmffolder.objectIds())
+        transaction.savepoint() # subtransaction
+        try:
+            self.portal.portal_atct.migrateToATCT()
+        except Exception, e:
+            ATDocument.manage_afterAdd = ATDocument.old_manage_afterAdd.im_func
+            del ATDocument.old_manage_afterAdd
+            self.fail('Migration raised error %s'%e)
+        self.failUnless('bogus_object' in self.folder.cmffolder.objectIds())
+        ATDocument.manage_afterAdd = ATDocument.old_manage_afterAdd.im_func
+        del ATDocument.old_manage_afterAdd
 
 
 tests.append(TestTypeMigrations)
